--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mad System Monkeys Gathering</title>
+    <title>Design System Tuesdays - A design system meetup</title>
     <meta
       name="description"
       content="Event page for the Design System Tuesdays meet up for Design System Engineers, Frontend Engineers, Design System Designers, User Experience Designers, Figma Designers or people interested in Design Tokens, Web Components, Design Systems or related topics happening in Bern, Switzerland."
