add sign up form

--- a/index.html
+++ b/index.html
@@ -49,6 +49,35 @@
         <li>Testing (Unit, Integration, End to End, Visual regression)</li>
         <li>Something else?</li>
       </ul>
+      <form
+        data-netlify="true"
+        class="section"
+        action="/success.html"
+        method="POST"
+      >
+        <fieldset>
+          <legend class="bordered-text">Sign up for the event</legend>
+
+          <label class="bordered-text" for="name">Name</label>
+          <div class="field">
+            <input type="text" id="name" name="name" required />
+          </div>
+          <label class="bordered-text" for="email">Email address</label>
+          <div class="field">
+            <input type="email" id="email" name="email" required />
+          </div>
+          <div class="align-right buttons">
+            <div class="field">
+              <button type="submit">
+                I'm in<span class="visually-hidden"
+                  >, register for the event</span
+                >
+              </button>
+            </div>
+            <div class="field"><button type="reset">Reset</button></div>
+          </div>
+        </fieldset>
+      </form>
     </main>
 
     <footer>
@@ -87,6 +116,7 @@
 
       <p class="author bordered-text">
         monkey patched by Philipp
+        <a aria-label="see source code of this page on GitHub" href="https://github.com/swisspost/design-system-tuesdays">GitHub</a>
         <a
           href="mailto:philipp.gfeller@post.ch"
           aria-label="Write an e-mail to Philipp (philipp.gfeller@post.ch)"
