--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
       </ul>
     </main>
     <form
-      data-netlify="true"
+      netlify
       class="section"
       action="/success.html"
       method="POST"
       netlify-honeypot="bot-field"
+      name="registrations"
     >
       <fieldset>
         <legend class="bordered-text">Sign up for the event</legend>
