--- a/success.html
+++ b/success.html
@@ -44,42 +44,50 @@
           <p class="subtitle bordered-text">
             March 26, 17:30, Swiss Post, Wankdorfallee 4, Bern Wankdorf
           </p>
+          <p class="section bordered-text">Can't wait to see you there!</p>
         </main>
 
         <footer>
-          <svg
-            width="107"
-            height="107"
-            viewBox="0 0 107 107"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            role="img"
-            aria-labelledby="logo-title"
-          >
-            <title id="logo-title">
-              Logo of the Swiss Post, the host of this event
-            </title>
-            <g clip-path="url(#clip0_2_62)">
-              <path d="M107 0H0V107H107V0Z" fill="#FFCC00" />
-              <path
-                d="M50.5278 48.0014V28.2361H29.2764V43.2458H14.8611V63.7542H29.2764V78.7639H50.5278V58.9986H45.475V74.0083H34.3291V58.9986H19.9139V48.0014H34.3291V32.9917H45.475V48.0014H50.5278Z"
-                fill="#FF0000"
-              />
-              <path
-                d="M79.5996 46.2259C79.5996 49.8114 76.6399 52.6084 72.8865 52.6084H67.1722V40.2736H72.8865C76.7844 40.2736 79.5996 42.7835 79.5996 46.2259ZM75.3409 28.2361H53.5V78.7639H67.1722V63.7542H75.3409C85.3741 63.7542 93.1699 56.0987 93.1699 46.2096C93.1699 36.2483 85.2299 28.2361 75.3409 28.2361Z"
-                fill="black"
-              />
-            </g>
-            <defs>
-              <clipPath id="clip0_2_62">
-                <rect width="107" height="107" fill="white" />
-              </clipPath>
-            </defs>
-          </svg>
-          <p class="bordered-text">Hosted by the Swiss Post</p>
-
+          <div>
+            <svg
+              width="107"
+              height="107"
+              viewBox="0 0 107 107"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-labelledby="logo-title"
+            >
+              <title id="logo-title">
+                Logo of the Swiss Post, the host of this event
+              </title>
+              <g clip-path="url(#clip0_2_62)">
+                <path d="M107 0H0V107H107V0Z" fill="#FFCC00" />
+                <path
+                  d="M50.5278 48.0014V28.2361H29.2764V43.2458H14.8611V63.7542H29.2764V78.7639H50.5278V58.9986H45.475V74.0083H34.3291V58.9986H19.9139V48.0014H34.3291V32.9917H45.475V48.0014H50.5278Z"
+                  fill="#FF0000"
+                />
+                <path
+                  d="M79.5996 46.2259C79.5996 49.8114 76.6399 52.6084 72.8865 52.6084H67.1722V40.2736H72.8865C76.7844 40.2736 79.5996 42.7835 79.5996 46.2259ZM75.3409 28.2361H53.5V78.7639H67.1722V63.7542H75.3409C85.3741 63.7542 93.1699 56.0987 93.1699 46.2096C93.1699 36.2483 85.2299 28.2361 75.3409 28.2361Z"
+                  fill="black"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_2_62">
+                  <rect width="107" height="107" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+            <p class="bordered-text">Hosted by the Swiss Post</p>
+          </div>
+    
           <p class="author bordered-text">
             monkey patched by Philipp
+            <a
+              aria-label="see source code of this page on GitHub"
+              href="https://github.com/swisspost/design-system-tuesdays"
+              >GitHub</a
+            >
             <a
               href="mailto:philipp.gfeller@post.ch"
               aria-label="Write an e-mail to Philipp (philipp.gfeller@post.ch)"
