--- a/index.html
+++ b/index.html
@@ -34,20 +34,23 @@
       <p class="subtitle">
         26. March 2024, 17:30, Wankdorfallee 4, Bern Wankdorf
       </p>
-
-      <p class="big">TODO: Find speakers and topics</p>
-      <p>
-        Would you like to present something? Write an email to
-        <a href="mailto:philipp.gfeller@post.ch">Philipp</a>
-      </p>
-      <h2 id="possible-topics">Interesting topics</h2>
-      <ul aria-labelledby="possible-topics">
-        <li>Web components & tools (Lit, Stencil, framework integration)</li>
-        <li>Frameworks (React, Vue, Angular, Svelte, ...)</li>
-        <li>Figma (Variables, Components)</li>
-        <li>Design Tokens</li>
-        <li>Testing (Unit, Integration, End to End, Visual regression)</li>
-        <li>Something else?</li>
+      <h2>Agenda</h2>
+      <ul class="agenda">
+        <li>
+          <h3>Migrating from Stencil to Lit</h3>
+          <p class="speaker">by Lukas Spirig</p>
+        </li>
+        <li>
+          <h3>Why is this not a standard?</h3>
+          <p>
+            About the (hard) first steps in standardising new HTML features with
+            Open UI.
+          </p>
+          <p class="speaker">by Philipp Gfeller</p>
+        </li>
+        <li>
+          <h3>🍻 Drinks and chat</h3>
+        </li>
       </ul>
     </main>
     <form
@@ -70,7 +73,7 @@
         </div>
         <label for="i-present" class="bordered-text field checkbox">
           <input type="checkbox" id="i-present" name="ipresent" />
-          I'd like to present something
+          I'd like to present something the next time
         </label>
         <div class="wants-to-present">
           <label for="topic" class="bordered-text">Topic</label>
