--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="madness.css" />
+    <meta
+      property="og:title"
+      content="Design System Tuesdays - A design system meetup"
+    />
+    <meta
+      property="og:description"
+      content="Meet up with people interested in Design Systems around Bern."
+    />
+    <meta
+      property="og:image"
+      content="https://design-system-tuesdays.netlify.app/favicon.png"
+    />
   </head>
   <body>
     <aside>
