update meta tags

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="madness.css" />
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://design-system-tuesdays.netlify.app"
+    />
+    <meta property="og:type" content="website" />
     <meta
       property="og:title"
       content="Design System Tuesdays - A design system meetup"
@@ -29,6 +35,29 @@
     />
     <meta
       property="og:image"
+      content="https://design-system-tuesdays.netlify.app/favicon.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="design-system-tuesdays.netlify.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://design-system-tuesdays.netlify.app"
+    />
+    <meta
+      name="twitter:title"
+      content="Design System Tuesdays - A design system meetup"
+    />
+    <meta
+      name="twitter:description"
+      content="Meet up with people interested in Design Systems around Bern."
+    />
+    <meta
+      name="twitter:image"
       content="https://design-system-tuesdays.netlify.app/favicon.png"
     />
   </head>
@@ -49,11 +78,11 @@
       <h2>Agenda</h2>
       <ul class="agenda">
         <li>
-          <h3>Migrating from Stencil to Lit</h3>
+          <h3>🎙️ Migrating from Stencil to Lit</h3>
           <p class="speaker">by Lukas Spirig</p>
         </li>
         <li>
-          <h3>Why is this not a standard?</h3>
+          <h3>🎤 Why is this not a standard?</h3>
           <p>
             About the (hard) first steps in standardising new HTML features with
             Open UI.
