--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <h2>Agenda</h2>
       <ul class="agenda">
         <li>
-          <h3>🎙️ Migrating from Stencil to Lit</h3>
+          <h3>🎙️ Auomatic Migrating from Stencil to Lit</h3>
           <p class="speaker">by Lukas Spirig</p>
         </li>
         <li>
