nicer hosted by

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
             </figure>
           </div>
 
-          <footer class="cloud small" style="margin-block-start: 3rem">
+          <footer class="small" style="margin-block-start: 3rem">
+            <hr />
             <p class="centered gap-1">
               <svg
                 width="32"
