fix more date stuff

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </header>
 
       <section class="cloud">
-        <h2>Design System Tuesday 2025</h2>
+        <h2>Design System Tuesday January 2026</h2>
         <p>
           <b>
             After the <a href="#first-agenda">first successful installment</a>,
